--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,30 @@
 markdown: kramdown
 url: ''
 baseurl: null
-title: Are the Oscars Still So White?
-description: A website for researching the racial and cultural diversity of Oscar winners
+title: Kevin Allegretti
+description: Project 1
 site-image: /WhatATheme/assets/images/meta.jpg
-site-keywords: 'Oscars, Racial, Diversity'
+site-keywords: 'Site, Template, Theme'
 favicon-url: null
-heroimage: '/assert/yzq winner-image.jpeg'
-email: ygaocf@connect.ust.hk
-facebook_username: Yue Luna
-instagram_username: patronus0420
-linkedin_username: Gao Yue
-github_username: gy5630
-youtube_channel_id: UCdyhDK-L2K2Zl672EFtz_bw
+heroimage: http://localhost:4000/IMG-5480.jpg
+email: Kevin.Allegretti1@marist.edu
+facebook_username: thedevslot
+twitter_username: thedevslot
+instagram_username: KevinAllegretti
+linkedin_username: thedevslot
+github_username: thedevslot
+youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
 reddit_username: /
 behance_username: /
 dribbble_username: /
 spotify_username: /
-author-name: HUMA5630G7
-author-image: '/Users/gy/HUMA5630.github.io/yzq\ winner-image.jpeg'
+google-analytics: UA-163806439-1
+disqus-shortname: thedevslot
+author-name: TheDevsLot
+author-image: 'http://localhost:4000/IMG-5480.jpg'
 author-about: >-
-  We are the seventh group in the HUMA 5630 programme at the Hong Kong University of Science and Technology and we are dedicated to the study of the racial and cultural diversity of Oscar winners.
+  I am a student at Marist College and I am 21 years old. I enjoy playing golf,
+  music producing, and coding.
 author-url: 'https://github.com/KevinAllegretti'
 sass:
   sass_dir: _sass
