--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 markdown: kramdown
 url: ''
 baseurl: null
-title: Kevin Allegretti
-description: Project 1
+title: Are the Oscars Still So White?
+description: A website for researching the racial and cultural diversity of Oscar winners
 site-image: /WhatATheme/assets/images/meta.jpg
 site-keywords: 'Site, Template, Theme'
 favicon-url: null
