--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: ''
 baseurl: null
 title: Are the Oscars Still So White?
 description: A website for researching the racial and cultural diversity of Oscar winners
-site-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/yzqwinner-image.jpeg
+site-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/Oscars.jpeg.webp
 site-keywords: 'Oscars, Racial, Diversity'
 favicon-url: null
 heroimage: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/G7-image.jpeg
