--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ behance_username: /
 dribbble_username: /
 spotify_username: /
 google-analytics: UA-163806439-1
-disqus-shortname: thedevslot
+disqus-shortname: oscarsracial
 author-name: HUMA5630G7
 author-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/G7-image.jpeg
 author-about: >-
