--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A website for researching the racial and cultural diversity of Osca
 site-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/oscars.jpeg
 site-keywords: 'Oscars, Racial, Diversity'
 favicon-url: null
-heroimage: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/G7-image.jpeg
+heroimage: https://github.com/aretheoscarssowhite/aretheoscarssowhite.github.io/blob/master/assets/images/background.jpeg?raw=true
 email: ygaocf@connect.ust.hk
 facebook_username: Yue Luna
 twitter_username:
