--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ youtube_channel_id: UCdyhDK-L2K2Zl672EFtz_bw
 google-analytics: UA-163806439-1
 disqus-shortname: oscarsracial
 author-name: HUMA5630G7
-author-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/G7-image.jpeg
+author-image: https://github.com/aretheoscarssowhite/aretheoscarssowhite.github.io/blob/master/assets/images/background.jpeg?raw=true
 author-about: >-
     We are the seventh group in the HUMA 5630 programme at the Hong Kong University of Science and Technology and we are dedicated to the study of the racial and cultural diversity of Oscar winners.
 author-url: 'https://github.com/gy5630'
