--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ markdown: kramdown
 url: ''
 baseurl: null
 title: Are the Oscars Still So White?
-description: A website for researching the racial and cultural diversity of Oscar winners. 
-<br>
-We aim to spread this concept and bring more attention to minorities.
+description: 
+<p> A website for researching the racial and cultural diversity of Oscar winners. <br>
+We aim to spread this concept and bring more attention to minorities.<p>
 site-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/oscars.jpeg
 site-keywords: 'Oscars, Racial, Diversity'
 favicon-url: null
