--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ markdown: kramdown
 url: ''
 baseurl: null
 title: Are the Oscars Still So White?
-description: A website for researching the racial and cultural diversity of Oscar winners. We aim to spread this concept and bring more attention to minoritie.
+description: A website for researching the racial and cultural diversity of Oscar winners. We aim to spread this concept and bring more attention to minorities.
 site-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/oscars.jpeg
 site-keywords: 'Oscars, Racial, Diversity'
 favicon-url: null
